--- a/src/css/newcss.css
+++ b/src/css/newcss.css
@@ -27,14 +27,14 @@ background-color: #42e2f4;
 }
 
 a:hover {
-  background-color: darkgrey;
+  background-color: teal;
 }
 
 a:active {
-  background-color: darkgrey;
+  background-color: teal;
 }
 a:link {
-  background-color: darkgrey;
+  background-color: teal;
 }
 
 .Khaled {
@@ -3315,19 +3315,19 @@ a:link {
 }
 .ui.primary.buttons .button:hover,
 .ui.primary.button:hover {
-  background-color: darkgrey;
+  background-color: teal;
   color: white;
   text-shadow: none;
 }
 .ui.primary.buttons .button:focus,
 .ui.primary.button:focus {
-  background-color: darkgrey;
+  background-color: teal;
   color: white;
   text-shadow: none;
 }
 .ui.primary.buttons .button:active,
 .ui.primary.button:active {
-  background-color: darkgrey;
+  background-color: teal;
   color: white;
   text-shadow: none;
 }
@@ -3335,7 +3335,7 @@ a:link {
 .ui.primary.buttons .active.button:active,
 .ui.primary.active.button,
 .ui.primary.button .active.button:active {
-  background-color: darkgrey;
+  background-color: teal;
   color: white;
   text-shadow: none;
 }
