--- a/src/css/newcss.css
+++ b/src/css/newcss.css
@@ -19,7 +19,7 @@
 }
 
 #home {
-    background: linear-gradient(black, #42e2f4, black)
+    background: (black, #42e2f4, black)
 }
 
 a {
@@ -39,8 +39,8 @@ a:link {
 
 .Khaled {
   padding-top: 10px;
-  margin-left: 30px;
-  width: 95%;
+  /* margin-left: 30px; */
+  width: 100%;
   height: 700px;
 }
 .ui.button {
