--- a/src/css/newcss.css
+++ b/src/css/newcss.css
@@ -8,6 +8,37 @@
  *
  */
 
+/* Navigation */
+
+/* unvisited link */
+/* a:link {
+    color: #FF0000;
+} */
+
+/* visited link */
+/* a:visited {
+    color: #00FF00;
+} */
+
+/* mouse over link */
+/* a:hover {
+    color: #FF00FF;
+} */
+
+/* selected link */
+/* a:active {
+    color: #0000FF;
+} */
+
+.NavBar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  font-size: 20px;
+  background: none !important;
+}
+
+
 
 /*******************************
             Button
@@ -15,25 +46,19 @@
 * {
   background-color: black;
   color: white !important;
-  text-decoration: none !important;
+  font-family: Arial !important;
+
+}
+
+.line {
+  text-decoration: underline;;
+}
+
+.noline {
+  text-decoration: none;
 }
 
 
-
-a {
-background-color: #42e2f4;
-}
-
-a:hover {
-  background-color: teal;
-}
-
-a:active {
-  background-color: teal;
-}
-a:link {
-  background-color: teal;
-}
 
 .Khaled {
   padding-top: 10px;
