--- a/src/css/componentcss.css
+++ b/src/css/componentcss.css
@@ -55,9 +55,24 @@ width: 100%;
   height: 75px;
   width: 150px;
   position: absolute;
-  left: 430px;
-  top: 100px;
+  left: 275px;
+  top: 150px;
   background: none;
+  background: black;
+  border: solid #65D36E;
+  border-radius: 7px;
+}
+
+.youtubeLogo {
+  height: 75px;
+  width: 150px;
+  position: absolute;
+  right: 290px;
+  top: 150px;
+  background: black;
+
+  border: solid #CD3E33;
+  border-radius: 7px;
 }
 
 .musicKhaled {
@@ -66,55 +81,34 @@ width: 100%;
   padding-top: 10px;
 }
 
-.musicText {
-  position: absolute;
-  left: 605px;
-  top: 100px;
-  color: #65D36E !important;
-  font-family: Arial !important;
-  background: none;
-}
 
 .spotify {
-  top: 185px;
-  width: 1000px;
-  height: 500px;
+  top: 250px;
+  width: 600px;
+  height: 350px;
   position: absolute;
-  left: 265px;
+  left: 50px;
   border: solid 5px #65D36E;
   border-radius: 7px;
 }
 
 /* VIDEO */
 
-.videoText {
+
+.youtubeKhaled {
+
+  border: solid white;
   position: absolute;
-  left: 600px;
-  top: 100px;
-  background: none;
-  color: #65D36E !important;
-  font-family: Arial !important;
+  right: 50px;
+  top: 250px;
+  border: solid 5px #CD3E33;
+  border-radius: 7px;
 }
 
 .videoKhaled {
   width: 100%;
   height: 100%;
   padding-top: 10px;
-}
-
-.vid1 {
-  display: flex;
-  justify-content: center;
-}
-
-.khaledvid1 {
-
-  border: solid white;
-  position: absolute;
-  left: 370px;
-  top: 170px;
-  border: solid 5px #42e2f4;
-  border-radius: 7px;
 }
 
 
@@ -163,10 +157,12 @@ width: 100%;
 
 .feed {
   margin-top: 25px;
-  width: 300px;
+  width: 350px;
+  right:265px;
   position: absolute;
+  background-color: #42e2f4;
   border: solid 5px #42e2f4;
-  border-radius: 7px;
+  border-radius: 5px;
 }
 
 
