--- a/src/css/componentcss.css
+++ b/src/css/componentcss.css
@@ -175,7 +175,15 @@ width: 100%;
   padding-top: 10px;
 }
 
+/*iTunes */
+#reactsx {
+    border:1px #fff solid;
+}
 
+.explicit::before {
+  content:"(Explicit) ";
+  color:red;
+}
 
 /* EXTRA STUFF */
 
@@ -184,7 +192,6 @@ width: 100%;
 /* MEDIA QUERY */
 @media only screen and (max-width: 786px) {
     * {
-
         text-align:center;
     }
     .NavBar {
@@ -200,4 +207,85 @@ width: 100%;
     {
       background-color:#222;
     }
+
+    .aboutText {
+      position:static;
+      top: 120px;
+      right: 75px;
+      width:100%;
+      border: solid 5px #42e2f4;
+      border-radius: 7px;
+    }
+
+    /* MUSIC MEDIA QUERY*/
+
+    .musicMain {
+      display: flex;
+      flex-direction:column;
+      background-image:url('https://wallpapersfit.com/wp-content/uploads/data/2017/11/26/DJ-Khaled-Wallpapers-HD-In-High-Definition-1WC200955.jpg');
+      background-repeat:repeat-y;
+    }
+    /*spotify logo*/
+    .musicLogo {
+      height: 75px;
+      width: 150px;
+      position: static;
+      left: 275px;
+      top: 150px;
+      background: none;
+      background: black;
+      border: solid #65D36E;
+      border-radius: 7px;
+    }
+
+    .youtubeLogo {
+      height: 75px;
+      width: 150px;
+      position: static;
+      right: 290px;
+      top: 150px;
+      background: black;
+      border: solid #CD3E33;
+      border-radius: 7px;
+    }
+
+    .youtubeKhaled {
+      position:static;
+      width:100%;
+    }
+
+    .musicKhaled {
+      width: 100%;
+      height: 100%;
+      padding-top: 10px;
+    }
+
+
+    .spotify {
+      display:block;
+      top: 250px;
+      width: 100%;
+      height: 350px;
+      position: static;
+      left: 50px;
+      border: solid 5px #65D36E;
+      border-radius: 7px;
+    }
+
+    #Itunes {
+      background-image:url('https://i.imgur.com/1dpP2z7.jpg');
+    }
+
+
+    #reactsx,#reactsx ul,#reactsx ul li {
+      /*background:rgba(255,255,255,0.1);*/
+      background:none;
+      color:#000;
+    }
+
+
+
+
+
+
 }
