--- a/src/css/Itunes.css
+++ b/src/css/Itunes.css
@@ -11,3 +11,12 @@
    background-repeat: repeat;
    background-image: url('https://i.imgur.com/1dpP2z7.jpg')
 }
+
+#reactsx {
+    border:1px #fff solid;
+}
+
+.explicit::before {
+  content:"(Explicit) ";
+  color:red;
+}
