--- a/src/css/componentcss.css
+++ b/src/css/componentcss.css
@@ -32,7 +32,7 @@
     /* MUSIC MEDIA QUERY*/
 
     .musicMain {
-      display: flex;
+      display: block;
       flex-direction:column;
       background-image:url('https://wallpapersfit.com/wp-content/uploads/data/2017/11/26/DJ-Khaled-Wallpapers-HD-In-High-Definition-1WC200955.jpg');
       background-repeat:repeat-y;
@@ -42,9 +42,9 @@
       height: 75px;
       width: 150px;
       position: static;
-      left: 275px;
-      top: 150px;
-      background: none;
+      left: auto;
+      top: auto;
+      display:none;
       background: black;
       border: solid #65D36E;
       border-radius: 7px;
@@ -56,6 +56,7 @@
       position: static;
       right: 290px;
       top: 150px;
+      display:none;
       background: black;
       border: solid #CD3E33;
       border-radius: 7px;
@@ -75,29 +76,54 @@
 
     .spotify {
       display:block;
-      top: 250px;
+      top: auto;
       width: 100%;
       height: 350px;
       position: static;
-      left: 50px;
       border: solid 5px #65D36E;
       border-radius: 7px;
     }
 
     #Itunes {
-      background-image:url('https://i.imgur.com/1dpP2z7.jpg');
+      /*background-image:url('https://i.imgur.com/1dpP2z7.jpg');*/
+      background-repeat:no-repeat;
+      background-attachment:fixed;
+      background-size:cover;
     }
 
 
     #reactsx,#reactsx ul,#reactsx ul li {
       /*background:rgba(255,255,255,0.1);*/
       background:none;
-      color:#000;
+      /*color:#000;*/
+      padding:0.2em;
+      text-align:left;
+      list-style:none;
     }
 
 
+    /* ABOUT */
 
+    #about {
+      width:100%;
+      position:static;
+      background-color:green;
+    }
 
+    .bio {
+      position:relative;
+      width:100%;
+      top:auto;
+      right:auto;
+      background-size:cover;
+      }
 
+    .aboutText {
+      width:auto;
+      position: static;
+      display:block;
+      border: solid 5px #42e2f4;
+      border-radius: 7px;
+    }
 
 }
