--- a/src/css/Itunes.css
+++ b/src/css/Itunes.css
@@ -1,22 +1,29 @@
 
 
-#itune {
-   width: 100vw;
-   display: flex;
-   justify-content: center;
-   justify-content: space-around;
-   text-align: center;
+#Itunes {
 
-   background-size: cover;
-   background-repeat: repeat;
-   background-image: url('https://i.imgur.com/1dpP2z7.jpg')
+
+   /* justify-content: center;
+   justify-content: space-around; */
+   /* text-align: center; */
+   /* background-size: cover;
+   background-repeat: repeat; */
+   margin-top: 10px;
 }
 
 #reactsx {
+  width: 45%;
     border:1px #fff solid;
 }
 
 .explicit::before {
   content:"(Explicit) ";
   color:red;
+
+}
+
+.ituneKhaled {
+  width: 20%;
+  margin-left: 500px;
+  height: 700px;
 }
